--- a/Styles/index.css
+++ b/Styles/index.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -26,11 +27,18 @@ header {
 
 main {
     width: 100%;
+    height: auto;
     background: rgba(255, 255, 255, 0.00);
     padding: 0px;
     display: grid;
     grid-template-columns: auto auto auto;
     font-family: 'Times New Roman', Times, serif;
+}
+
+@media screen and (orientation: portrait) {
+    main {
+        height: 100%;
+    }
 }
 
 footer {
@@ -114,32 +122,32 @@ li.menu {
     grid-template-columns: none;
 }
 
-    li.menu:nth-child(1) {
-        background: url(..\\..\\Images\\Main.png) no-repeat;
-        background-size: contain;
-        border-top: 2px solid #c685e8;
-        border-bottom: 2px solid #c685e8;
-    }
+li.menu:nth-child(1) {
+    background: url(..\\..\\Images\\Main.png) no-repeat;
+    background-size: contain;
+    border-top: 2px solid #c685e8;
+    border-bottom: 2px solid #c685e8;
+}
 
-    li.menu:nth-child(1) a.menu {
-        font-size: 42px;
-        font-weight: bold;
-    }
+li.menu:nth-child(1) a.menu {
+    font-size: 42px;
+    font-weight: bold;
+}
 
-    li.menu:nth-child(2) {
-        background: url(..\\..\\Images\\Cats.png) no-repeat;
-        background-size: contain;
-    }
+li.menu:nth-child(2) {
+    background: url(..\\..\\Images\\Cats.png) no-repeat;
+    background-size: contain;
+}
 
-    li.menu:nth-child(3) {
-        background: url(..\\..\\Images\\Game.png) no-repeat;
-        background-size: contain;
-    }
+li.menu:nth-child(3) {
+    background: url(..\\..\\Images\\Game.png) no-repeat;
+    background-size: contain;
+}
 
-    li.menu:nth-child(4) {
-        background: url(..\\..\\Images\\Gallery.png) no-repeat;
-        background-size: contain;
-    }
+li.menu:nth-child(4) {
+    background: url(..\\..\\Images\\Gallery.png) no-repeat;
+    background-size: contain;
+}
 
 ul.menu {
     padding: 0px;
@@ -226,10 +234,11 @@ hr.header-content {
 .div-img {
     grid-column-start: 2;
     grid-column-end: 3;
+    height: auto;
 }
 
 .div-text {
-    width: 60%;
+    /*width: 60%;*/
     font-size: 20px;
     grid-column-start: 3;
     grid-column-end: 4;
@@ -289,7 +298,7 @@ h2.header-content {
 
 
 .content {
-    padding: 16px;
+    padding: 5px;
 }
 
 .sticky {
@@ -299,8 +308,14 @@ h2.header-content {
     border-bottom: 1px solid #c8c8c8;
 }
 
+@media screen and (max-width: 600px){
+    .sticky {
+        position: initial;
+    }
+}
+
 .sticky + .content {
-    padding-top: 30px;
+    padding-top: 10px;
 }
 
 
@@ -345,6 +360,18 @@ h2.header-content {
     grid-template-columns: 175px auto;
 }
 
+@media screen and (orientation: landscape) {
+    #fact:not(.sticky) {
+        font-size: 16px;
+    }
+}
+
+@media screen and (orientation: portrait) {
+    #fact:not(.sticky) {
+        font-size: 16px;
+    }
+}
+
 #cat-fact {
     color: #c8c8c8;
     padding: 0px;
@@ -376,8 +403,15 @@ h2.header-content {
     background: linear-gradient(#0d0010, #24002b);
 }
 
+@media screen and (max-width: 1000px) {
+    #navigation {
+        display: none;
+    }
+}
+
 #panel {
     width: 100%;
+    height: auto;
     display: grid;
     grid-template-columns: auto;
 }
